Closed Bug 1897349 Opened 9 months ago Closed 9 months ago

Perma OS X opt + shippable accessible/tests/browser/tree/browser_css_alt.js | Wrong value of property 'name' for [role: statictext, name: 'before', address: [xpconnect wrapped nsIAccessible]]. - Got "before", expected "alt"

Categories

(Core :: Disability Access APIs, defect)

defect

Tracking

()

RESOLVED FIXED
128 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox126 --- unaffected
firefox127 --- unaffected
firefox128 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: Jamie)

References

(Regression)

Details

(Keywords: intermittent-failure, regression, test-verify-fail)

Attachments

(1 file)

Filed by: tszentpeteri [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=458543265&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/QindZIHfThKYrg6jvoq_Jg/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/QindZIHfThKYrg6jvoq_Jg/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1


[task 2024-05-17T01:18:27.158Z] 01:18:27     INFO - TEST-PASS | accessible/tests/browser/tree/browser_css_alt.js | Wrong value of property 'role' for [role: statictext, name: 'before', address: [xpconnect wrapped nsIAccessible]]. - 
[task 2024-05-17T01:18:27.158Z] 01:18:27     INFO - Buffered messages finished
[task 2024-05-17T01:18:27.161Z] 01:18:27     INFO - TEST-UNEXPECTED-FAIL | accessible/tests/browser/tree/browser_css_alt.js | Wrong value of property 'name' for [role: statictext, name: 'before', address: [xpconnect wrapped nsIAccessible]]. - Got "before", expected "alt"
[task 2024-05-17T01:18:27.161Z] 01:18:27     INFO - Stack trace:
[task 2024-05-17T01:18:27.161Z] 01:18:27     INFO - chrome://mochikit/content/browser-test.js:test_is:1620
[task 2024-05-17T01:18:27.161Z] 01:18:27     INFO - chrome://mochitests/content/a11y/accessible/tests/mochitest/common.js:testAccessibleTree:547
[task 2024-05-17T01:18:27.161Z] 01:18:27     INFO - chrome://mochitests/content/a11y/accessible/tests/mochitest/common.js:testAccessibleTree:700
[task 2024-05-17T01:18:27.161Z] 01:18:27     INFO - chrome://mochitests/content/browser/accessible/tests/browser/tree/browser_css_alt.js:testTextPseudo:230
[task 2024-05-17T01:18:27.161Z] 01:18:27     INFO - chrome://mochitests/content/browser/accessible/tests/browser/shared-head.js:accessibleTask/</<:554
[task 2024-05-17T01:18:27.162Z] 01:18:27     INFO - resource://testing-common/BrowserTestUtils.sys.mjs:withNewTab:146
[task 2024-05-17T01:18:27.162Z] 01:18:27     INFO - chrome://mochitests/content/browser/accessible/tests/browser/shared-head.js:accessibleTask/<:473
[task 2024-05-17T01:18:27.162Z] 01:18:27     INFO - chrome://mochikit/content/browser-test.js:handleTask:1139
[task 2024-05-17T01:18:27.162Z] 01:18:27     INFO - chrome://mochikit/content/browser-test.js:_runTaskBasedTest:1211
[task 2024-05-17T01:18:27.162Z] 01:18:27     INFO - chrome://mochikit/content/browser-test.js:Tester_execTest:1353
[task 2024-05-17T01:18:27.162Z] 01:18:27     INFO - chrome://mochikit/content/browser-test.js:nextTest/<:1122
[task 2024-05-17T01:18:27.162Z] 01:18:27     INFO - chrome://mochikit/content/tests/SimpleTest/SimpleTest.js:SimpleTest.waitForFocus/<:1058
[task 2024-05-17T01:18:27.163Z] 01:18:27     INFO - TEST-PASS | accessible/tests/browser/tree/browser_css_alt.js | Wrong parent of [role: text leaf, name: 'inside', address: [xpconnect wrapped nsIAccessible]] - 

:Jamie, since you are the author of the regressor, bug 1896047, could you take a look?

For more information, please visit BugBot documentation.

Flags: needinfo?(jteh)

Set release status flags based on info from the regressing bug 1896047

This is permafailing on OS X 11 WebRender Shippable as it can be seen here.

Jamie, could you please take a look at this?

Thank you!

Severity: S4 → --
Priority: P5 → --
Summary: Intermittent TV accessible/tests/browser/tree/browser_css_alt.js | Wrong value of property 'name' for [role: statictext, name: 'before', address: [xpconnect wrapped nsIAccessible]]. - Got "before", expected "alt" → Perma OS X Shippable accessible/tests/browser/tree/browser_css_alt.js | Wrong value of property 'name' for [role: statictext, name: 'before', address: [xpconnect wrapped nsIAccessible]]. - Got "before", expected "alt"
See Also: → 1897430

Setting the severity as S3, in case it’s also related to the pref differences.

Severity: -- → S3

This is permafailing on tier 1 jobs so a fix here soon would be appreciated to avoid backing out the regressor.

I was waiting for bug 1897430 to land to see if it fixed this. I'll push a try build shortly to check. I don't really understand why this would be failing; I don't know the difference between "shippable" builds vs normal Mac builds or why it would impact this, so that will need investigation.

I'm looking into this. This doesn't seem to be related to the pref, since earlier tests in this file are passing that I would otherwise expect to fail. I don't quite know what the fix is yet, but I have some early thoughts.

Note to self: What happens if layout updates the text in the pseudo-element for some reason after a11y has already created an Accessible for it? Do we need code in WillRefresh to skip TextUpdater where CSS alt text is present?

Assignee: nobody → jteh
Flags: needinfo?(jteh)
Summary: Perma OS X Shippable accessible/tests/browser/tree/browser_css_alt.js | Wrong value of property 'name' for [role: statictext, name: 'before', address: [xpconnect wrapped nsIAccessible]]. - Got "before", expected "alt" → Perma OS X opt + shippable accessible/tests/browser/tree/browser_css_alt.js | Wrong value of property 'name' for [role: statictext, name: 'before', address: [xpconnect wrapped nsIAccessible]]. - Got "before", expected "alt"

When we create a TextLeafAccessible for a CSS pseudo-element, we already use the alt text if present.
However, it seems layout sometimes re-renders the text of pseudo-elements.
Previously, a11y would update the text in this case like it would for any other TextLeafAccessible, thus overwriting the alt text with the text rendered by layout.
To fix this, we now skip updating text if CSS alt text is present.

Patch seems to fix this.

Pushed by jteh@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8eab0cf09064 Don't update CSS pseudo-element TextLeafAccessibles if there is CSS content alt text. r=eeejay
Status: NEW → RESOLVED
Closed: 9 months ago
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: